2001-11-20 08:18 GMT Dave Pearson <davep@davep.org>
   * source/rtl/gtsln/Makefile
   * source/rtl/gtsln/gtsln.c
   * source/rtl/gtsln/kbsln.c
     * Applied fixes from Marek Paliwoda <paliwoda@inetia.pl> that lets
       the slang GT driver code build on different GNU/Linux distributions
       (and possibly other flavours of Un*x).
	
2001-11-20 05:20 GMT+0700 Andi Jahja <harbour@cbn.net.id>
   * source/compiler/harbour.y
     ! declare function prototype __yy_memcpy() to satisfy Borland
   * source/macro/macro.y
     ! declare function prototype __yy_memcpy() to satisfy Borland

2001-11-19 16:00 UTC-0500 David G. Holm <dholm@jsd-llc.com>

  * source/rdd/dbfcdx/dbfcdx1.c
  	! Removed spurious (BYTE) overrides on dual assignments.

2001-11-19 17:20 GMT+1 Martin Vogel <vogel@inttec.de>

   + contrib/libct/bit2.c
     + number and bit manipulation functions CLEARBIT, SETBIT, ISBIT

     all provided by Walter Negro - FOEESITRA <waltern@foeesitra.org.ar>

   * contrib/libct/Makefile
   * contrib/libct/makefile.bc
   * contrib/libct/makefile.vc
   * contrib/libct/ctflist.txt
     * changes according to the above

2001-11-19 18:30 GMT+0700 Andi Jahja <harbour@cbn.net.id>
   * source/compiler/harbour.y
     ! add type casts for MsVC

   * makefile.vc / makefile.bc
     ! add flag "--no-line" to bison to kill MsVC warnings,
       so now macroy.c and harboury.c will be cleanly compiled
     ! change compiler flag: -w => -W3 ( no longer cause eye irritation )

2001-11-18 22:15 GMT+1 JFL (mafact) <jfl@mafact.com>
   * harbour/source/vm/classes.c
     * change CLSADDMSG() to intercept Operator overloading and
     use standardised symbol in place of operator itself
     (like "-" => "__OpLess" )
   * harbour/source/vm/hvm.c
     * Modif done to send correct message to object as newly defined
   * harbour/include/hbclass.ch
     + added an OPERATOR command for Inline use now we can define an OPERATOR
     using inline only like ;