@@ -7,7 +7,7 @@ HOW TO BUILD HARBOUR FROM THE SOURCE
 
 You'll need these:
   - Flex
-  - Bison 1.25 or upper (set BISON_SIMPLE envvar to point to bison.simple)
+  - Bison 1.28 or upper (set BISON_SIMPLE envvar to point to bison.simple)
   - A supported (check MAKE_GNU.BAT for a list) C compiler
     (with all the envvars set (PATH, LIB, INCLUDE, etc...))
   - GNU-make if you want to use it with some other C compiler than GCC
@@ -33,4 +33,3 @@ To build a final executable, see above, but use BIN/BLD*.*
 instead of MAKE*.*
 
 Viktor Szakats <viktor.szakats@syenar.hu>
-
